2001-07-19  Michael Meeks  <michael@ximian.com>

	* tests/test-ui.c (main): upd.

	* bonobo/bonobo-ui-util.c (bonobo_ui_util_new_menu),
	(bonobo_ui_util_new_placeholder),
	(bonobo_ui_util_set_radiogroup),
	(bonobo_ui_util_set_toggle),
	(bonobo_ui_util_new_std_toolbar): 
	(bonobo_ui_util_new_toggle_toolbar),
	(bonobo_ui_util_build_accel): kill.

	* changes.txt: upd.

2001-07-19  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-toolbar-button-item.c: upd.

	* bonobo/Makefile.am: remove bonobo-ui-toolbar-icon.[ch]

	* bonobo/bonobo-ui-toolbar-icon.[ch]: remove.

	* bonobo/bonobo-ui-sync-menu.c (impl_bonobo_ui_sync_menu_build): upd.

2001-07-19  Michael Meeks  <michael@ximian.com>

	* tests/test-ui.c (main): hack out test encode / decode.

	* bonobo/bonobo-ui-sync-toolbar.c (do_config_popup): simplify.

	* bonobo/bonobo-ui-sync-menu.c (impl_bonobo_ui_sync_menu_build): ditto.

	* bonobo/bonobo-ui-component.c (bonobo_ui_component_get_prop): 
	simplify removing decode.
	(bonobo_ui_component_set_prop): simplify removing encode.
	(bonobo_ui_component_set_status): ditto.

	* bonobo/bonobo-ui-sync-toolbar.c (impl_bonobo_ui_sync_toolbar_state): ditto.

	* bonobo/bonobo-ui-sync-toolbar.c (impl_bonobo_ui_sync_toolbar_state): ditto.

	* bonobo/bonobo-ui-sync-status.c (impl_bonobo_ui_sync_status_state): ditto.

	* bonobo/bonobo-ui-sync-menu.c (put_hint_in_statusbar): ditto.

	* bonobo/bonobo-ui-sync-menu.c (impl_bonobo_ui_sync_menu_state): ditto.

	* bonobo/bonobo-ui-config-widget.c (populate_list): ditto.

	* bonobo/bonobo-selector-widget.c (get_lang_list): 
	cut and paste from Nautilus - ug.
	(free_lang_list): impl.
	(get_filtered_objects): internationalize properly & simplify.

	* bonobo/bonobo-ui-util.c (bonobo_ui_util_decode_str),
	(bonobo_ui_util_encode_str): kill.

	* bonobo/bonobo-ui-util.h (bonobo_ui_util_encode_str),
	(bonobo_ui_util_encode_str): turn into g_strdup aliases - now
	libxml2 can cope with utf-8 fine.

2001-07-19  Michael Meeks  <michael@ximian.com>
